@@ -70,7 +70,8 @@ typedef	struct {
 	z_stream	stream;
 	int		zipquality;		/* compression level */
 	int		state;			/* state flags */
-#define	ZSTATE_INIT	0x1		/* zlib setup successfully */
+#define ZSTATE_INIT_DECODE 0x01
+#define ZSTATE_INIT_ENCODE 0x02
 
 	TIFFVGetMethod	vgetparent;		/* super-class method */
 	TIFFVSetMethod	vsetparent;		/* super-class method */
@@ -90,11 +91,18 @@ ZIPSetupDecode(TIFF* tif)
 	static const char module[] = "ZIPSetupDecode";
 
 	assert(sp != NULL);
+        
+        /* if we were last encoding, terminate this mode */
+	if (sp->state & ZSTATE_INIT_ENCODE) {
+            deflateEnd(&sp->stream);
+            sp->state = 0;
+        }
+
 	if (inflateInit(&sp->stream) != Z_OK) {
 		TIFFErrorExt(tif->tif_clientdata, module, "%s: %s", tif->tif_name, sp->stream.msg);
 		return (0);
 	} else {
-		sp->state |= ZSTATE_INIT;
+		sp->state |= ZSTATE_INIT_DECODE;
 		return (1);
 	}
 }
@@ -109,6 +117,10 @@ ZIPPreDecode(TIFF* tif, tsample_t s)
 
 	(void) s;
 	assert(sp != NULL);
+
+        if( (sp->state & ZSTATE_INIT_DECODE) == 0 )
+            ZIPSetupDecode(tif);
+
 	sp->stream.next_in = tif->tif_rawdata;
 	sp->stream.avail_in = tif->tif_rawcc;
 	return (inflateReset(&sp->stream) == Z_OK);
@@ -122,6 +134,8 @@ ZIPDecode(TIFF* tif, tidata_t op, tsize_t occ, tsample_t s)
 
 	(void) s;
 	assert(sp != NULL);
+        assert(sp->state == ZSTATE_INIT_DECODE);
+
 	sp->stream.next_out = op;
 	sp->stream.avail_out = occ;
 	do {
@@ -158,11 +172,16 @@ ZIPSetupEncode(TIFF* tif)
 	static const char module[] = "ZIPSetupEncode";
 
 	assert(sp != NULL);
+	if (sp->state & ZSTATE_INIT_DECODE) {
+            inflateEnd(&sp->stream);
+            sp->state = 0;
+        }
+
 	if (deflateInit(&sp->stream, sp->zipquality) != Z_OK) {
 		TIFFErrorExt(tif->tif_clientdata, module, "%s: %s", tif->tif_name, sp->stream.msg);
 		return (0);
 	} else {
-		sp->state |= ZSTATE_INIT;
+		sp->state |= ZSTATE_INIT_ENCODE;
 		return (1);
 	}
 }
@@ -177,6 +196,9 @@ ZIPPreEncode(TIFF* tif, tsample_t s)
 
 	(void) s;
 	assert(sp != NULL);
+        if( sp->state != ZSTATE_INIT_ENCODE )
+            ZIPSetupEncode(tif);
+
 	sp->stream.next_out = tif->tif_rawdata;
 	sp->stream.avail_out = tif->tif_rawdatasize;
 	return (deflateReset(&sp->stream) == Z_OK);
@@ -190,6 +212,9 @@ ZIPEncode(TIFF* tif, tidata_t bp, tsize_t cc, tsample_t s)
 {
 	ZIPState *sp = EncoderState(tif);
 	static const char module[] = "ZIPEncode";
+
+        assert(sp != NULL);
+        assert(sp->state == ZSTATE_INIT_ENCODE);
 
 	(void) s;
 	sp->stream.next_in = bp;
@@ -257,12 +282,12 @@ ZIPCleanup(TIFF* tif)
 	tif->tif_tagmethods.vgetfield = sp->vgetparent;
 	tif->tif_tagmethods.vsetfield = sp->vsetparent;
 
-	if (sp->state&ZSTATE_INIT) {
-		/* NB: avoid problems in the library */
-		if (tif->tif_mode == O_RDONLY)
-			inflateEnd(&sp->stream);
-		else
-			deflateEnd(&sp->stream);
+	if (sp->state & ZSTATE_INIT_ENCODE) {
+            deflateEnd(&sp->stream);
+            sp->state = 0;
+        } else if( sp->state & ZSTATE_INIT_DECODE) {
+            inflateEnd(&sp->stream);
+            sp->state = 0;
 	}
 	_TIFFfree(sp);
 	tif->tif_data = NULL;
@@ -279,7 +304,7 @@ ZIPVSetField(TIFF* tif, ttag_t tag, va_list ap)
 	switch (tag) {
 	case TIFFTAG_ZIPQUALITY:
 		sp->zipquality = va_arg(ap, int);
-		if (tif->tif_mode != O_RDONLY && (sp->state&ZSTATE_INIT)) {
+		if ( sp->state&ZSTATE_INIT_ENCODE ) {
 			if (deflateParams(&sp->stream,
 			    sp->zipquality, Z_DEFAULT_STRATEGY) != Z_OK) {
 				TIFFErrorExt(tif->tif_clientdata, module, "%s: zlib error: %s",
